# tis-100

./: .gitignore  CMakeLists.txt  NOTES.md
include/: node.h  opcodes.h  targets.h
src/: CMakeLists.txt  node.c
